Fix: Space of User banner image stretched (change to cover)

--- a/themes/clean-base/less/humhub/panel.less
+++ b/themes/clean-base/less/humhub/panel.less
@@ -24,10 +24,11 @@
       border-radius: @panel-border-radius;
     }
 
-    // Hide default gray image
     img.img-profile-header-background {
       min-height: 100px;
+      object-fit: cover;
 
+      // Hide default gray image
       &[src$="/img/default_banner.jpg"] {
         width: 0;
       }
